--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,7 +7,7 @@ jobs:
             - name: Checkout the code
               uses: actions/checkout@v3
             - name: Install dependencies
-              uses: npm ci
+              run: npm ci
             - name: Linting
               run: npm run lint
             - name: Testing
